--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="keep_track_of_your_progress">KEEP TRACK OF YOUR\nPROGRESS</string>
     <string name="join_a_supportive_community">JOIN A SUPPORTIVE\nCOMMUNITY</string>
     <string name="get_started">Get Started</string>
+    <string name="login_with_email">Login with email</string>
+    <string name="login">Login</string>
+    <string name="forget_password">Forget Password?</string>
+    <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="sign_up">Sign up</string>
 </resources>
