--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="sign_up">Sign up</string>
     <string name="continue_with_google">Continue with google</string>
     <string name="continue_with_facebook">Continue with facebook</string>
+    <string name="forget_your_password">FORGET YOUR PASSWORD?</string>
 </resources>
