--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="continue_with_google">Continue with google</string>
     <string name="continue_with_facebook">Continue with facebook</string>
     <string name="forget_your_password">FORGET YOUR PASSWORD?</string>
+    <string name="enter_your_registered_email_below_to_receive_password_reset_instruction">Enter your registered email below to receive password reset instruction</string>
+    <string name="send_reset_link">Send Reset Link</string>
+    <string name="remember_password">Remember password?</string>
 </resources>
